--- a/parcel-hyperdrive/package.json
+++ b/parcel-hyperdrive/package.json
@@ -1,11 +1,7 @@
 {
   "dependencies": {
-    "@babel/polyfill": "^7.0.0",
-    "@beaker/webdb": "^4.3.1",
-    "dat-archive-web": "^1.1.0",
-    "hyperdrive": "^9.14.0",
+    "@jimpick/hyperdrive-next": "^9.12.3-5",
     "random-access-idb": "^1.0.4",
-    "uws-stream": "^1.1.3",
     "websocket-stream": "^5.1.2"
   }
 }
